# morpheus

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
morpheus/: cli.py
morpheus/bundled_skills/frontend-design/: SKILL.md
product-minded-dev/: SKILL.md
scripts/: install-skills.ps1  install-skills.sh
