[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "morpheus-skills"
version = "0.2.2"
description = "Install Codex/Claude style SKILL.md packages to local agent skill directories."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Contributors" }]
license = { text = "MIT" }
dependencies = [
    "rich>=13,<15",
]

[project.scripts]
morpheus = "morpheus.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["morpheus*"]

[tool.setuptools.package-data]
morpheus = ["bundled_skills/*/SKILL.md"]
